--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        buildConfigField("String", "BASE_URL", "https://bikewise.org/api/v2/")
+        buildConfigField "String", "BASE_URL", '"https://bikewise.org/api/v2/"'
 
     }
     buildTypes {
@@ -31,6 +31,7 @@ dependencies {
 
     //gilde
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     //play service
