--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -29,10 +33,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
-    //gilde
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //play service
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
@@ -46,6 +48,8 @@ dependencies {
     //for room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
